added use of PerRequestRedisCache to SettingManager
Use Configuration.UsePerRequestRedisCacheForSettingManager(); in PreInitialize to use PerRequestRedisCache in setting manager

--- a/src/Abp.AspNetCore.PerRequestRedisCache/Abp.AspNetCore.PerRequestRedisCache.csproj
+++ b/src/Abp.AspNetCore.PerRequestRedisCache/Abp.AspNetCore.PerRequestRedisCache.csproj
@@ -26,6 +26,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Abp.RedisCache\Abp.RedisCache.csproj" />
+      <ProjectReference Include="..\Abp.Zero.Common\Abp.Zero.Common.csproj" />
     </ItemGroup>
 
     <ItemGroup>
